<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="6dp"
        android:layout_margin="6dp">

        <LinearLayout
            android:id="@+id/btnUberX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_uberX"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginRight="16dp" android:layout_marginLeft="16dp"
                android:src="@drawable/uberx"
                app:civ_border_color="@android:color/black"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:text="@string/text_uber_x"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/textUberXValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="10sp"
                android:text="@string/text_currency"
                android:textStyle="italic|bold"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnUberSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_uberSelect"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginRight="16dp" android:layout_marginLeft="16dp"
                android:src="@drawable/uber_select"
                android:scaleType="centerCrop"
                app:civ_border_color="@android:color/black"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:text="@string/text_uber_select"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/textUberSelectValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="10sp"
                android:text="@string/text_currency"
                android:textStyle="italic|bold"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnUberBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_uberBlack"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginRight="16dp" android:layout_marginLeft="16dp"
                android:src="@drawable/uber_black"
                app:civ_border_color="@android:color/black"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:text="@string/text_uber_black"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/textUberBlackValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="10sp"
                android:text="@string/text_currency"
                android:textStyle="italic|bold"
                android:textAlignment="center"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
